--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,8 +28,12 @@ textarea {
 .time-block {
   text-align: center;
   border-radius: 15px;
+  padding: 20px;
+  border: 2px solid #000000;
 }
-
+.column{
+  display: contents;
+}
 .row {
   white-space: pre-wrap;
   height: 80px;
